# agent-cli

./: .env.example  .gitignore  AGENTS.md  README.md  RELEASE_CHECKLIST.md  config.example.yaml  pyproject.toml
docs/: pi-agent-core-port-plan.md  project-atlas.html
nipux_cli/: __init__.py  __main__.py  artifacts.py  browser.py  chat_commands.py  chat_context.py  chat_controller.py  chat_frame_runtime.py  chat_intent.py  chat_tui.py  cli.py  cli_help.py  cli_render.py  cli_state.py  compression.py  config.py  context_pressure.py  daemon.py  daemon_control.py  dashboard.py  db.py  digest.py  doctor.py  event_render.py  first_run_controller.py  first_run_frame_runtime.py  first_run_tui.py  frame_snapshot.py  llm.py  measurement.py  metric_format.py  operator_context.py  parser_builder.py  planning.py  progress.py  provider_errors.py  record_commands.py  scheduling.py  service_install.py  settings.py  (+24 more)
plans/: nipux-runtime-notes.md
scripts/: generate_project_atlas.py  install.sh  local_smoke.py
tests/nipux_cli/: test_artifacts.py  test_browser_web.py  test_cli.py  test_cli_model_preflight.py  test_compression.py  test_config.py  test_daemon.py  test_dashboard.py  test_db.py  test_digest.py  test_doctor.py  test_generic_runtime_audit.py  test_llm.py  test_local_smoke.py  test_metric_format.py  test_operator_context.py  test_planning.py  test_progress.py  test_project_atlas.py  test_provider_errors.py  test_templates.py  test_tools.py  test_uninstall.py  test_worker.py
