[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nipux"
version = "0.1.0"
description = "A restartable CLI worker for long-running agent jobs"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Nipux" }]
license = "MIT"
keywords = ["agent", "cli", "automation", "daemon", "openai-compatible"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "openai>=2.21.0,<3",
  "pyyaml>=6.0.2,<7",
  "tavily-python>=0.5.0",
]

[project.urls]
Homepage = "https://nipux.com"
Source = "https://github.com/nipuxx/agent-cli"
Issues = "https://github.com/nipuxx/agent-cli/issues"

[project.optional-dependencies]
dev = ["pytest>=9.0.2,<10", "ruff"]

[project.scripts]
nipux = "nipux_cli.cli:main"

[tool.setuptools.packages.find]
include = ["nipux_cli", "nipux_cli.*"]

[tool.pytest.ini_options]
testpaths = ["tests/nipux_cli"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.uv]
exclude-newer = "7 days"
